[package]
name = "nrich"
description = "Quickly enrich IPs with information about their open ports/ vulnerabilities/ software."
version = "0.4.2"
edition = "2021"
authors = ["Shodan"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://gitlab.com/shodan-public/nrich"
repository = "https://gitlab.com/shodan-public/nrich"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
futures = "0.3.25"
reqwest = { version = "0.11.13", default-features = false, features = ["brotli", "json", "rustls-tls", "socks"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
structopt = "0.3.26"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }

[features]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dev-dependencies]
assert_cmd = "=2.0.10"

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/nrich", dest = "/usr/bin/nrich", mode = "755" },
]